all instances of "guest" in code replaced with "away"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <h3>HOME</h3>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
             </div>
         </div>
         <div class="home-score">
@@ -16,7 +16,7 @@
                 <p id="score-home" class="score"></p>
             </div>
             <div class="counter-bg">
-                <p id="score-guest" class="score"></p>
+                <p id="score-away" class="score"></p>
             </div>
         </div>
         <div class="buttons">
@@ -25,10 +25,10 @@
                 <button class="increment-btn" onclick="increment2home()">+2</button>
                 <button class="increment-btn" onclick="increment3home()">+3</button>
             </div>
-            <div class="button-guest">
-                <button class="increment-btn" onclick="increment1guest()">+1</button>
-                <button class="increment-btn" onclick="increment2guest()">+2</button>
-                <button class="increment-btn" onclick="increment3guest()">+3</button>
+            <div class="button-away">
+                <button class="increment-btn" onclick="increment1away()">+1</button>
+                <button class="increment-btn" onclick="increment2away()">+2</button>
+                <button class="increment-btn" onclick="increment3away()">+3</button>
             </div>
             </div>
             <div class="ng-div">
